--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -10,17 +10,30 @@
     tools:context=".MainActivityFragment">
 
     <TextView
-        android:id="@+id/instructions_text_view"
+        android:id="@+id/tv_instructions"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="24dp"
         android:text="@string/instructions" />
 
     <Button
+        android:id="@+id/btn_tell_joke"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/instructions_text_view"
+        android:layout_marginTop="16dp"
+        android:layout_below="@id/tv_instructions"
+        android:layout_centerHorizontal="true"
         android:onClick="tellJoke"
         android:text="@string/button_text" />
+
+    <ProgressBar
+        android:id="@+id/pb_loading_indicator"
+        android:layout_width="@dimen/icon_size"
+        android:layout_height="@dimen/icon_size"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:visibility="invisible" />
 
     <com.google.android.gms.ads.AdView
         android:id="@+id/adView"
